--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div class="grid">
        <h1>Digital Library</h1>
        <div class="form" id="inputForm">
-           <input id="bookTitle" class="input" type="text" placeholder="Title of the book" value="">
-           <input id="bookAuthor" class="input" type="text" placeholder="Author of the book" value="">
-           <input id="bookPages" class="input" type="text" placeholder="Pages" value="">
+           <input id="bookTitle" type="text" placeholder="Title of the book" value="">
+           <input id="bookAuthor" type="text" placeholder="Author of the book" value="">
+           <input id="bookPages" type="text" placeholder="Pages" value="">
            <input id="addBook" class="addButton" type="submit" value="Add"></input>
        </div>
        <div class="headline">
-        <p>READ: <p id="num">0</p></p>
-        <p>UNREAD: <p id="num">0</p></p>
-        <p>BOOKS: <p id="num">0</p></p>
-        <button class="deleteButton">DELETE</button>
+        <p>READ: <p id="read">0</p></p>
+        <p>UNREAD: <p id="unread">0</p></p>
+        <p>BOOKS: <p id="booksNumber">0</p></p>
+        <!-- <button class="deleteButton">DELETE</button> -->
        </div>
        <div id="bookList" class="booklist">
         <div class="books">
@@ -34,7 +34,10 @@
             <p>STATUS</p>
             <p>REMOVE</p>
        </div>
-       <div id="list" class="list">
+       <div class="list">
+           <p>1</p>
+           <p>2</p>
+           <p>3</p>
        </div>
        </div>
     </div>
