--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="grid">
        <h1>Digital Library</h1>
        <div class="form" id="inputForm">
-           <input id="bookTitle" type="text" placeholder="Title of the book" value="">
-           <input id="bookAuthor" type="text" placeholder="Author of the book" value="">
-           <input id="bookPages" type="text" placeholder="Pages" value="">
+           <input id="bookTitle" class="input" type="text" placeholder="Title of the book" value="">
+           <input id="bookAuthor" class="input" type="text" placeholder="Author of the book" value="">
+           <input id="bookPages" class="input" type="text" placeholder="Pages" value="">
            <input id="addBook" class="addButton" type="submit" value="Add"></input>
        </div>
        <div class="headline">
@@ -34,10 +34,7 @@
             <p>STATUS</p>
             <p>REMOVE</p>
        </div>
-       <div class="list">
-           <p>1</p>
-           <p>2</p>
-           <p>3</p>
+       <div id="list" class="list">
        </div>
        </div>
     </div>
