kalapszar ez is

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>READ: <p id="read">0</p></p>
         <p>UNREAD: <p id="unread">0</p></p>
         <p>BOOKS: <p id="booksNumber">0</p></p>
-        <!-- <button class="deleteButton">DELETE</button> -->
+        <button class="deleteButton" onclick="test()">TEST</button>
        </div>
        <div id="bookList" class="booklist">
         <div class="books">
